--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>ru.cells.icc</groupId>
             <artifactId>tabbypdf-front</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
         <!-- database -->
@@ -42,6 +42,14 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <!-- CSV -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+
 
         <!-- Spring dependencies -->
         <dependency>
@@ -64,7 +72,7 @@
                 <executions>
                     <execution>
                         <id>unpack</id>
-                        <phase>prepare-package</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>unpack</goal>
                         </goals>
@@ -73,7 +81,7 @@
                                 <artifactItem>
                                     <groupId>ru.cells.icc</groupId>
                                     <artifactId>tabbypdf-front</artifactId>
-                                    <version>0.1-SNAPSHOT</version>
+                                    <version>0.2-SNAPSHOT</version>
                                     <type>jar</type>
                                     <excludes>META-INF/**</excludes>
                                     <outputDirectory>${project.build.directory}/classes/static</outputDirectory>
